Fix title wrap

--- a/blogApp/src/components/FeatureIcon/featureIconStyles.module.css
+++ b/blogApp/src/components/FeatureIcon/featureIconStyles.module.css
@@ -1,6 +1,7 @@
 .feature-icon-area {
   text-align: center;
-  width: 128px;
+  min-width: 128px;
+  max-width: fit-content;
   margin-bottom: 20px;
 }
 
